./mvnw clean install and remove test

--- a/section2-7/learn-spring-framework/pom.xml
+++ b/section2-7/learn-spring-framework/pom.xml
@@ -47,6 +47,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.monkey_mode.learn_spring_framework.game.App01GamingBasicJava</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
