Config spring actuator

--- a/learn-spring-boot/src/main/resources/application.properties
+++ b/learn-spring-boot/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.profiles.active=prod
 currency-service.url=https://default.monkey_mode.com
 currency-service.username=defaultusername
 currency-service.password=defaultpassword
+
+management.endpoints.web.exposure.include=health,metrics
